--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -17,18 +17,14 @@
 
     <ul class="todo-list">
       <!-- These are here just to show the structure of the list items -->
-      <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
+      <!-- List items should get the class `editing` when editing -->
       <li *ngFor="let todo of todos" [ngClass]="{editing: todo.editing}" >
         <div class="view">
           <label (dblclick)="todo.editing = true">{{todo.title}}</label>
-
-          <button class="destroy" (click)="destroyTodo(todo)"></button>
           <button type="button" class="btn btn-danger" (click)="destroyTodo(todo)"></button>
-
-
-
-
         </div>
+        <!--  completed -->
+
         <input class="edit"
                #updatedTodo
                [value]="todo.title"
