--- a/src/app/todo/todo.component.css
+++ b/src/app/todo/todo.component.css
@@ -24,6 +24,8 @@ ul.todo-list {
   display: none;
 }
 
+/*would use scss or less here*/
+
 .todoapp {
   background: #fff;
   margin: 130px 0 40px 0;
@@ -84,6 +86,8 @@ ul.todo-list {
   box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
   font-size: 24px;
 }
+
+/*would use scss or less here*/
 
 .todo-list {
   margin: 0;
